--- a/exchange-dapp/src/App.css
+++ b/exchange-dapp/src/App.css
@@ -4,7 +4,7 @@ html {
   background: #222;
 }
 
-h1, h2, h3, .label {  
+h1, h2, h3, .label, .button-edit {  
   font-weight: bold;
   text-shadow: 1px 1px 3px #000;
 }
@@ -49,7 +49,7 @@ div {
 .container-loan-request-form,
 .container-existing-loan-form,
 .container-loan-contracts {
-  width: 475px;
+  width: 510px;
   margin: 40px auto;
   padding: 24px;
   position: relative;
@@ -78,8 +78,8 @@ div {
 }
 
 .input {
-  width: 72%;
-  margin: 4px 4%;
+  width: 70%;
+  margin: 4px 4px 4px 4%;
   padding: 10px;
   border: 1px solid #2e4d6d;
   box-shadow: 0 1px 8px 0 rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.19);
@@ -104,6 +104,11 @@ div {
   border: 1px solid #2e4d6d;
   border-radius: 12px;
   text-shadow: 1px 1px 2px rgba(1, 1, 1, 0.4);
+}
+
+.button-edit {
+  margin: 4px 4% 4px 0;
+  padding: 4px 8px;
 }
 
 .button:active {  
@@ -135,7 +140,6 @@ div {
   width: 300px;
   margin: 0 auto;
   padding: 0;
-  /* background: orange; */
   display: flex;
   flex-direction: row;
 }
