--- a/exchange-dapp/src/App.css
+++ b/exchange-dapp/src/App.css
@@ -106,12 +106,17 @@ div {
   text-shadow: 1px 1px 2px rgba(1, 1, 1, 0.4);
 }
 
+.button-disabled {
+  cursor: not-allowed;
+  background: darkgray;
+}
+
 .button-edit {
   margin: 4px 4% 4px 0;
   padding: 4px 8px;
 }
 
-.button:active {  
+.button-enabled:active {  
   transform: scale(0.98);
   box-shadow: 3px 2px 22px 1px rgba(0, 0, 0, 0.24);
 }
@@ -137,7 +142,7 @@ div {
 }
 
 .container-existing-loan-buttons {
-  width: 300px;
+  width: 400px;
   margin: 0 auto;
   padding: 0;
   display: flex;
@@ -149,12 +154,20 @@ div {
   padding: 6px 0 8px 0;
 }
 
+.button-existing-loan-commit {
+  width: 120px;
+  margin-left: 31px;
+  margin-right: 10px;
+}
+
 .button-existing-loan-update {
-  margin-right: 20px;
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
 .button-existing-loan-sign {
-  margin-left: 20px;
+  margin-left: 10px;
+  margin-right: 0;
 }
 
 .button-loan-request-create {
