--- a/exchange-dapp/src/App.css
+++ b/exchange-dapp/src/App.css
@@ -77,15 +77,44 @@ div {
   text-align: left;
 }
 
-.input {
+.input,
+.datalist {
   width: 70%;
   margin: 4px 4px 4px 4%;
   padding: 10px;
   border: 1px solid #2e4d6d;
+  font-size: 13px;
   box-shadow: 0 1px 8px 0 rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.19);
   -webkit-box-shadow: 0 1px 1px 2px rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.19);
   -moz-box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.19);
   border-radius: 5px;
+}
+
+.input-container {
+  width: 74.2%;
+  margin: 4px 0 4px 4%;
+  padding: 0;
+  border: none;
+}
+
+.datalist-nft {
+  width: 100%;
+  margin: 0;
+  border: node;
+}
+
+.image-loan-request-nft {
+  width: 450px;
+  margin: 25px 0 17px 0;
+  box-shadow: 0 1px 8px 0 rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.19);
+  -webkit-box-shadow: 0 1px 1px 2px rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.19);
+  -moz-box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.19);
+  border-radius: 15px;
+}
+
+.container-no-image {
+  width: 100%;
+  margin: 20px 0;
 }
 
 .button {
