--- a/exchange-dapp/src/static/css/App.css
+++ b/exchange-dapp/src/static/css/App.css
@@ -103,15 +103,14 @@ div {
   border: node;
 }
 
-.image-loan-request-nft,
-.image-existing-loan-nft {
+/* .image-existing-loan-nft {
   width: 450px;
   margin: 25px 0 17px 0;
   box-shadow: 0 1px 8px 0 rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.19);
   -webkit-box-shadow: 0 1px 1px 2px rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.19);
   -moz-box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.19);
   border-radius: 15px;
-}
+} */
 
 .container-no-image {
   width: 100%;
