Added stats to NFT cards.

--- a/exchange-dapp/src/static/css/CardFlip.css
+++ b/exchange-dapp/src/static/css/CardFlip.css
@@ -114,6 +114,8 @@
   
   .card__body {
     padding: 10px;
+    overflow-y: scroll;
+    height: 200px;
   }
   
   .card__body dl {
@@ -127,6 +129,10 @@
   }
 
   .card__body dt {
-      font-size: 14px;
-      font-weight: bold;
+      font-size: 16px;
+      font-weight: 900;
+  }
+
+  .card__body .attr_label {
+      font-weight: 650;
   }
