--- a/exchange-dapp/src/static/css/BorrowerPage.css
+++ b/exchange-dapp/src/static/css/BorrowerPage.css
@@ -15,6 +15,10 @@ h1, h2, h3, .label, .button-edit {
   text-shadow: 1px 1px 3px #000;
 }
 
+h2 {
+  margin-bottom: 20px;
+}
+
 h3 {
   margin-top: 0;
 }
@@ -62,7 +66,7 @@ div {
 .container-existing-loan-form,
 .container-loan-contracts {
   width: 510px;
-  margin: 40px auto 0 auto;
+  margin: 20px auto 0 auto;
   padding: 24px;
   position: relative;
   border-radius: 12px;
@@ -115,15 +119,6 @@ div {
   border: node;
   cursor: pointer;
 }
-
-/* .image-existing-loan-nft {
-  width: 450px;
-  margin: 25px 0 17px 0;
-  box-shadow: 0 1px 8px 0 rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.19);
-  -webkit-box-shadow: 0 1px 1px 2px rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.19);
-  -moz-box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.19);
-  border-radius: 15px;
-} */
 
 .container-no-image {
   width: 100%;
@@ -220,10 +215,11 @@ div {
     width: 140px;
 }
 
-.button-edit-nft,
-.button-edit-token-id {
+.button-none {
   width: 23px;
-  background: none;
+  margin: 4px 4% 4px 0;
+  padding: 4px 8px;
+  opacity: 0;
   border-color: none;
   border: none;
   box-shadow: none;
@@ -232,8 +228,11 @@ div {
   cursor: default;
 }
 
-.button-edit-nft:active, 
-.button-edit-token-id:active {  
+.button-none:active {  
   transform: none;
   box-shadow: none;
+}
+
+.container-active-loan {
+  border: 6px solid green;
 }
