--- a/exchange-dapp/src/static/css/BorrowerPage.css
+++ b/exchange-dapp/src/static/css/BorrowerPage.css
@@ -84,6 +84,13 @@ div {
   flex-direction: row;
 }
 
+.container-active-loan-component {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: row;
+}
+
 .label {
   margin: 0;
   padding: 0;
@@ -189,6 +196,25 @@ div {
 .button-existing-loan {
   width: 100px;
   padding: 6px 0 8px 0;
+}
+
+.button-existing-loan-pay {
+  height: 25px;
+  width: 40px;
+  margin: 2px auto;     
+  padding: 6px 1rem 8px 1rem;
+  background: #5086bd;
+  color: white;
+  position: relative;
+  letter-spacing: 0.7px;
+  font-weight: bold;
+  cursor: pointer;
+  box-shadow: 0 1px 8px 0 rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.19);
+  -webkit-box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.19);
+  -moz-box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.19);
+  border: 1px solid #2e4d6d;
+  border-radius: 12px;
+  text-shadow: 1px 1px 2px rgba(1, 1, 1, 0.4);
 }
 
 .button-existing-loan-commit {
