Working payment and distro of loan.

--- a/exchange-dapp/src/static/css/BorrowerPage.css
+++ b/exchange-dapp/src/static/css/BorrowerPage.css
@@ -241,6 +241,10 @@ div {
     width: 140px;
 }
 
+.button-existing-loan-withdraw-nft {
+  width: 120px;
+}
+
 .button-none {
   width: 23px;
   margin: 4px 4% 4px 0;
