--- a/exchange-dapp/src/static/css/LenderPage.css
+++ b/exchange-dapp/src/static/css/LenderPage.css
@@ -42,6 +42,11 @@ div {
   padding: 0 5%;
 }
 
+.input-available-loan-withdraw {
+  width: 74.2%;
+  margin: 0;
+}
+
 .container-loan-contracts-master {
   overflow-y: auto;
   height: 90vh;
@@ -137,6 +142,25 @@ div {
   position: relative;
   letter-spacing: 0.7px;
   font-size: 14px;
+  font-weight: bold;
+  cursor: pointer;
+  box-shadow: 0 1px 8px 0 rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.19);
+  -webkit-box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.19);
+  -moz-box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.19);
+  border: 1px solid #2e4d6d;
+  border-radius: 12px;
+  text-shadow: 1px 1px 2px rgba(1, 1, 1, 0.4);
+}
+
+.button-active-loan-withdraw {
+  height: 25px;
+  width: 40px;
+  margin: 2px 0;     
+  padding: 8px 1.15rem 6px 1rem;
+  background: #5086bd;
+  color: white;
+  position: relative;
+  letter-spacing: 0.7px;
   font-weight: bold;
   cursor: pointer;
   box-shadow: 0 1px 8px 0 rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.19);
